# CandlePilot_AI

./: .env.example  .gitignore  Makefile  README.md
ai-context/: 01_PRODUCT_VISION.md  02_TECH_STACK.md  03_UI_GUIDELINES.md  04_DATA_MODEL.md  05_MARKET_DATA_ENGINE.md  06_PATTERN_ENGINE.md  07_STRATEGY_ENGINE.md  08_ALERTS_SYSTEM.md  09_BACKTESTING.md  10_BUILD_RULES_FOR_CLAUDE.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: health.py
backend/app/api/v1/: backtest.py  candles.py  patterns.py  router.py  strategies.py  ws.py
backend/app/backtest/: __init__.py  metrics.py  runner.py  types.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/market_data/: __init__.py  aggregator.py  hub.py  provider.py  service.py  types.py
backend/app/market_data/providers/: mock.py
backend/app/patterns/: __init__.py  detectors.py  engine.py  types.py
backend/app/strategies/: __init__.py  detectors.py  engine.py  indicators.py  types.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md
extension/: README.md  manifest.json
extension/popup/: options.html  options.js  popup.css  popup.html  popup.js
frontend/: .env.example  .gitignore  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  not-found.tsx
frontend/src/hooks/: use-alerts-store.ts  use-mobile.ts
frontend/src/lib/: mock-alerts.ts  mock-candles.ts  (+4 more)
ledger/: CP-001.md  CP-002.md  CP-003.md  CP-004.md  CP-005.md  CP-006.md  CP-007.md  CP-008.md  CP-009.md  CP-010.md  CP-011.md  CP-012.md
web/: next.config.ts
(+62 files in other folders)
